--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- ここからheader -->
     <div class="header0">
       <div class="area-text">（ここはheader-0エリアです）</div>
-      <div class="teitel">＜練習＞</div>
+      <div class="teitel">＜lesson＞</div>
       <a href="#" clas="m-icon"></a>
       <span class="fa fa-bars"></span>
       <a class="login" href="#">ログイン</a>
